window.SIDEBAR_ITEMS = {"mod":["health_check_response","transaction_message_proto","transaction_service_client","transaction_service_server","transaction_state_proto","transaction_vote_proto"],"struct":["AbortMessage","AckMessage","BroadcastMessageRequest","BroadcastMessageResponse","CommitMessage","HealthCheckRequest","HealthCheckResponse","PrepareMessage","QueryStatusMessage","StatusResponseMessage","Target","TransactionIdProto","TransactionMessageProto","TransactionMessageRequest","TransactionMessageResponse","TransactionOperationProto","TransactionStateProto","TransactionStatusRequest","TransactionStatusResponse","TransactionVoteProto","VoteMessage"]};